<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srNoText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bankNameText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creditCardText" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactionAmountText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transactionDateText" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msgReceivedTimeText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/sr_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Sr No Value" />


            <TextView
                android:id="@+id/bank_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Bank Value" />

            <TextView
                android:id="@+id/card_number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Credit Card Number" />


            <TextView
                android:id="@+id/amount_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Transaction Amt value" />

            <TextView
                android:id="@+id/date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Transaction Date Value" />


            <TextView
                android:id="@+id/received_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Msg Received Time" />


        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
</LinearLayout>